Fix modal form + section location form on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -993,8 +993,13 @@ footer::after {
   display: block;
   width: 100%;
   max-height: 100%;
-  height: 450px;
+  height: 350px;
   border: none;
+}
+@media screen and (min-width: 768px) {
+  .section-location__map-mobile {
+    height: 450px;
+  }
 }
 @media screen and (min-width: 1280px) {
   .section-location__map-mobile {
@@ -1006,7 +1011,7 @@ footer::after {
   width: 100%;
   height: 100%;
   max-width: 425px;
-  max-height: 480px;
+  max-height: 550px;
   padding: 48px 74px;
   background-color: var(--color-primary-blue);
   background-image: url(../img/modal-bg.png);
@@ -1113,9 +1118,9 @@ footer::after {
   position: relative;
   width: 100%;
   height: 100%;
-  max-width: 450px;
-  max-height: 550px;
-  padding: 22px 88px;
+  max-width: 350px;
+  max-height: 580px;
+  padding: 20px 40px;
   background-color: var(--color-primary-blue);
   background-image: url(../img/modal-bg.png);
   border-radius: 48px;
@@ -1124,7 +1129,7 @@ footer::after {
 @media screen and (min-width: 768px) {
   .modal {
     max-width: 620px;
-    max-height: 450px;
+    max-height: 530px;
     padding: 38px 120px;
   }
 }
