--- a/scss/layouts/_location-section.scss
+++ b/scss/layouts/_location-section.scss
@@ -40,8 +40,12 @@
       display: block;
       width: 100%;
       max-height: 100%;
-      height: 450px;
+      height: 350px;
       border: none;
+
+      @media screen and (min-width: $bp-tablet) {
+        height: 450px;
+      }
       @media screen and (min-width: $bp-desktop) {
         display: none;
       }
@@ -53,7 +57,7 @@
     width: 100%;
     height: 100%;
     max-width: 425px;
-    max-height: 480px;
+    max-height: 550px;
     padding: 48px 74px;
     background-color: var(--color-primary-blue);
     background-image: url(../img/modal-bg.png);
