--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -21,9 +21,9 @@
   position: relative;
   width: 100%;
   height: 100%;
-  max-width: 450px;
-  max-height: 550px;
-  padding: 22px 88px;
+  max-width: 350px;
+  max-height: 580px;
+  padding: 20px 40px;
   background-color: var(--color-primary-blue);
   background-image: url(../img/modal-bg.png);
   border-radius: 48px;
@@ -31,7 +31,7 @@
 
   @media screen and (min-width: $bp-tablet) {
     max-width: 620px;
-    max-height: 450px;
+    max-height: 530px;
     padding: 38px 120px;
   }
 
